# trab-devops-ci-cd

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/bhaskara/: eq_segundo_grau.py
test/: test_solucao.py
